@@ -5,10 +5,8 @@ DIST README-v7r7-0.BFQ 21937 SHA256 d53e830875c98294b14311d19422e0fa039658eff226
 DIST aufs-sources-3.18.1+_p20150126.tar.xz 164988 SHA256 51f1b25a3bd56a4c044d704d2eb997c2e51c555c4018d464ab1583049b2593e1 SHA512 f17a327143524c7a90076a03ae8c45655ddc5885b1ba2b3e4a29158e90b2f61fd674e517a4256153d9c6d1cf20ba6a511ec67cc53a6493b35fd4e72968217df6 WHIRLPOOL fb7d8e4e917105d3ac5dfe5003052eb0ecc298b6f0579caba9c73620ce42a524145d5692bebb6f60026d631aa2edde4ed2b8584f1be84cc1c0199bb4d3c921dd
 DIST deblob-3.18 127087 SHA256 c720eabb3911f8dfa4398c4250853df4633018abebc01a509ee4a283c3e00941 SHA512 6fe33762ba19aad7ff891b7b805cc26f6e2926f5e40c92fa45bc7f31bdeb5c8fc42b97e5d37d71b9422da239c7c54abd25f1fa2fa1e5733c6053abbf4c9e9011 WHIRLPOOL c351a3ae15c59081fca69c1b5d9b9de10f024eb01f1426722a0d6ccb7caa34330be42897cd85cf19b22ff876352b0cec1c19707edc81c4cb01ad9c1df2e3d831
 DIST deblob-check-3.18 654232 SHA256 30f22602b6ddf2cbccc16ef25fdc4d92755f3972e1c671d7cab8b9d6865eb155 SHA512 2cff9abef479a55dd6a0699371be8227ba63b18da1fb153d5df382e0a5e4f1b745b7de256a367a36efa9d12e2aad5622cc288efef009feebf81c108dbef4fe16 WHIRLPOOL e92927ad1565e80ce87e8bda372f8f7eb42bc0f47ad9b19fe5cf737903b2021fd6e3756e8d22b70f3037a46c254fec8b7285b37beb10795ccb4ca99d38876f8c
-DIST genpatches-3.18-6.base.tar.xz 142108 SHA256 89885e46acbe555c796ada1bcf0338e846e3723c41b04c936013f9f51d1b5714 SHA512 8d04897eb6f68c72888eb2d4028f33d38d094b94bff6bfcef172e3787a8bfa938173805814e88d03ff6b405a3efb9312b030100e1bc526cabf36ea839e6a2be0 WHIRLPOOL 3da3b28546ecd942f619ffd7cc35407ed6fe25fca7165e7c06318647ec1bda24a1107d4369284ce9dac0a6606e0c6f0869e00e1bfbfe610e663fa49ad43d587f
-DIST genpatches-3.18-6.extras.tar.xz 16188 SHA256 6bc6055db0c1d49e358c067207f4ba0bd718734124cd92b60bc5e9f85f3b0f9c SHA512 2f3051ca496c05b12a544cec3345a3d25d79bcf9bc9d6f43c75a33901f0767d2e8e92d4e9132f7003548863a4d6ba3b051b4aa65f58edf8fecf0322fc98fa2ed WHIRLPOOL 6f2151b3d559eb87748c78ed4714c76e95b4aad2dbc7ea6b9b88940f04bcf45b7728036cd3e990ae8807bf667435f90c0925edb3a34e2e48f3814ddde0889c0c
-DIST genpatches-3.18-8.base.tar.xz 197144 SHA256 f0e5072d15d07ee49b0493edb8b4557938ff8fb5ee01bc956726e8affe7ac25e SHA512 4545fb57df8d552b9c7137f6cdee0633e9b43c19739301417153813ade4085fc8e119ca4c96e9d39018ab47c1dd4239d023d00a14fcae2707bba4e100cdfc261 WHIRLPOOL a23625418fdabb6f518beff21c60a633906ab4c7d7b6f4cf599dae04bbc30801457d10046eb039c76fe60f8575150a312f11b9d8625f3e9369d72bf9615cc5a0
-DIST genpatches-3.18-8.extras.tar.xz 16188 SHA256 d0fe34ce244b6e972ac2f4e2ed3504a5b07c24adec98d55bc519c286bfdc69db SHA512 715226fbca053392f2f34f904f05b24777d065732f91a0f96a94cf8a34cc094e2d5e38c8f550b1eb00901f7746247c38ec07220ed677f372918e2d6e9ff55584 WHIRLPOOL 51bee769773d165fd4ac5b1d311c0332ae1102832079dc481115f00cfd9fd0feaa51594a00e8a9a18ca64a60a51c0f9de26c722253c747f4f714bbeac73520e4
+DIST genpatches-3.18-9.base.tar.xz 207580 SHA256 931fee6744642d052ce2d7e5324f904cefed9d62d1314d16a7dfbacee43bbef9 SHA512 dd156bcdee7b9f9dbd66ca0720743a2378ca4a828f867ab086d5e99d91618b375bf44e8e8796b6e2ca0db6c584f0c32135dc20b16a603f1c0bdf0605af978d5e WHIRLPOOL 6f1ae442d8b7bb8686f8dbff55d6bc2243a2073c32c246a8db1040e7c578d92d4e4fd313c15079a3e7c774ac0731939864e7804061a3a260c0e584bcb883ade7
+DIST genpatches-3.18-9.extras.tar.xz 16180 SHA256 edd42f842d055068e19916955bd586da60b0a1cb6af954aac1505466ab469eb8 SHA512 6e4759a58cc61bddc9d703932e22c8db14c4b437b788bb0eee6aedb709bc8223e3621e853fc6dc51ba23309778e5633e6982af59fdd9bcbecfbedfa619ba006b WHIRLPOOL b76c94fd7ae178344c20e921153d568c9bcf220670d4c9130c53dec398be9e04ad7700d48e3f94dcc4da1b631f9e2831f0d7c3b29f98d66c9b75098aa3ecd358
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-da192988c7cb69709bb70f74f576f1479dce0e1d.patch 16381 SHA256 65118fccbba51186bd5904c2f3439e4dafbdebf3b638b2338abcf69a3bda1333 SHA512 66043a3cd267be5209c382b6aa9c9cf995d5499e8873546794042fbf17bacf577f9b4ab010fd3f20c629f40613c89b3e3d49536e7717b4a6e380c01547c39f41 WHIRLPOOL c43d99483c02fb5b193769f0a7a6ce9a868b12aad29fc1382b4d3c72cb4cb5baefa98929d5d9fb7d5e1524f5b6e75f5330ed039a15391a7a54e7b7053c3847a1
 DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
